2002-03-04  Gregory John Casamento <greg_casamento@yahoo.com>
	  & Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableView.m added methods to handle posting of
	notifications as well as methods to handle making appropriate
	delegate calls.  Also made necessary changes in other methods
	([NSTableView mouseDown:], [NSTableView selectAll], etc...) 
	to use them.  (PYR)
	* Source/NSOutlineView.m overrode notification methods and delegate
	methods defined in NSTableView. (GJC)  This was done as a 
	collaborative effort to ensure that NSOutlineView is more 
	maintainable and benefits from updates made to NSTableView.
	Also made changes to increase spacing between "knob" and text
	* Images/common_outlineUnexpandable.tiff lightened image to 
	make it stand out more when an item cannot be expanded. (GJC)
	
2002-03-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/AppKit/NSEvent.h: Modify to support MacOS-X documented API
	(rather than just the currently implemented one).
	* Source/NSEvent.m: ditto.

2002-03-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableView.m ([NSTableView -superviewFrameChanged:]): 
	fix a bug when resizing a tableview with autoresizesAllColumnsToFit
	set to YES.

Mon Mar  4 09:09:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSavePanel.m: Do not include AppKit/IMLoading.h.

2002-03-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSavePanel.m: Hack around accessory view addition/removal
	code - fix a few bugs and simplify by relying more on autoresizing
	and less on manual computation of resizing values.  Now works with
	ProjectCentre on my system.

2002-03-03  Gregory Casamento <greg_casamento@yahoo.com>
	
	* Images/common_outlineUnexpandable.tiff added.
	* Images/GNUmakefile modified to install images
	* Source/NSOutlineView.m modified to use new images.
	Also made several fixes which should now make NSOutlineView
	usable.  The graphics used are consistent with the look of